Significant interface improvements

--- a/index.html
+++ b/index.html
@@ -12,17 +12,18 @@
 </head>
 <body>
 
+
 <p>Output: <div>
+	<span id="detected_vars">f(x) = x</span><br /><br />
 	<span id="problem">`x=(-b+-sqrt(b^2 - 4ac)) / (2a)`</span>
 	<span id="problem2" style="display: none;"></span>
 </div>.</p>
 
 <p style="color: orange; display: none;" id="error_box">Error: <span id="error_message"></span></p>
-<p>Detected Variables: <span id="detected_vars">x</span></p>
 <p>Differentiate: <span id="answer">x</span></p>
 <p> With respect to: <span id="wrt">x</span></p>
 <p>Solve for:</p>
-<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Mixed partial derivative with respect to <span id="wrt_arr">x, y</span> from left-to-right</p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Mixed partial derivative with respect to <span id="wrt_arr">x, y</span> (computes <span id="wrt_disp" contenteditable="false">f_{xy}</span>) from left-to-right</p>
 <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;All mixed partial derivatives of order <span id="order_num">2</span> with respect to variables specified above</p>
 
 </body>
