Interface improvements, critical bugfixes in SCM differentiator

--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
 </div>.</p>
 
 <p style="color: orange; display: none;" id="error_box">Error: <span id="error_message"></span></p>
-<p>Differentiate: <span id="answer">x</span></p>
+<p>Differentiate:</p>
+<p>Expression: <span id="answer">x</span></p>
+<p>Relation: <span id="answer_lhs">x^2 + y^2 + z^2</span>`=`<span id="answer_rhs">1</span></p>
 <p> With respect to: <span id="wrt">x</span></p>
 <p>Solve for:</p>
 <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Mixed partial derivative with respect to <span id="wrt_arr">x, y</span> (computes <span id="wrt_disp" contenteditable="false">f_{xy}</span>) from left-to-right</p>
