Implement recursive power folding, improve web interface and algebraic simplification

--- a/index.html
+++ b/index.html
@@ -13,11 +13,12 @@
 <body>
 
 
-<p>Output: <div>
+<p>Output:</p>
+<div>
 	<span id="detected_vars">f(x) = x</span><br /><br />
 	<span id="problem">`x=(-b+-sqrt(b^2 - 4ac)) / (2a)`</span>
 	<span id="problem2" style="display: none;"></span>
-</div>.</p>
+</div>
 
 <p style="color: orange; display: none;" id="error_box">Error: <span id="error_message"></span></p>
 <p>Differentiate:</p>
