--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
 	<script src="/mathquill.min.js"></script>
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-MML-AM_CHTML"></script>
 	<script type="text/javascript" src="/biwascheme-0.6.8-min.js"></script>
+	<script type="text/javascript" src="/hljs-scheme.js"></script>
 	<script src="/app.js" type="text/javascript"></script>
 	<link rel="stylesheet" type="text/css" href="/app.css">
+	<link rel="stylesheet" type="text/css" href="/monokai-sublime.css">
 </head>
 <body>
 
@@ -28,6 +30,15 @@
 <p>Solve for:</p>
 <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Mixed partial derivative with respect to <span id="wrt_arr">x, y</span> (computes <span id="wrt_disp" contenteditable="false">f_{xy}</span>) from left-to-right</p>
 <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;All mixed partial derivatives of order <span id="order_num">2</span> with respect to variables specified above</p>
+
+<div>
+	<p>LaTeX Input: <br /><code class="scheme debug_outputs" readonly="true"></code></p>
+	<p>ASCII Conversion: <br /><code class="scheme debug_outputs" readonly="true"></code></p>
+	<p>Parsed as Infix (Scheme): <br /><code class="scheme debug_outputs" readonly="true"></code></p>
+	<p>Constant Folding (Scheme): <br /><code class="scheme debug_outputs" readonly="true"></code></p>
+	<p>Derivative as Prefix (Scheme): <br /><code class="scheme debug_outputs" readonly="true"></code></p>
+	<p>Derivative as Infix (Scheme): <br /><code class="scheme debug_outputs" readonly="true"></code></p>
+</div>
 
 </body>
 </html>
