Refine debug interface

--- a/index.html
+++ b/index.html
@@ -31,13 +31,11 @@
 <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Mixed partial derivative with respect to <span id="wrt_arr">x, y</span> (computes <span id="wrt_disp" contenteditable="false">f_{xy}</span>) from left-to-right</p>
 <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;All mixed partial derivatives of order <span id="order_num">2</span> with respect to variables specified above</p>
 
-<div>
-	<p>LaTeX Input: <br /><code class="scheme debug_outputs" readonly="true"></code></p>
-	<p>ASCII Conversion: <br /><code class="scheme debug_outputs" readonly="true"></code></p>
-	<p>Parsed as Infix (Scheme): <br /><code class="scheme debug_outputs" readonly="true"></code></p>
-	<p>Constant Folding (Scheme): <br /><code class="scheme debug_outputs" readonly="true"></code></p>
-	<p>Derivative as Prefix (Scheme): <br /><code class="scheme debug_outputs" readonly="true"></code></p>
-	<p>Derivative as Infix (Scheme): <br /><code class="scheme debug_outputs" readonly="true"></code></p>
+<div id="debug_area" style="display: none;">
+	<p>Parsed as Infix: <br /><code class="scheme debug_outputs" readonly="true"></code></p>
+	<p>Constant Folding: <br /><code class="scheme debug_outputs" readonly="true"></code></p>
+	<p>Derivative as Prefix: <br /><code class="scheme debug_outputs" readonly="true"></code></p>
+	<p>Derivative as Infix: <br /><code class="scheme debug_outputs" readonly="true"></code></p>
 </div>
 
 </body>
