Critical LaTeX to ACSII bugfix, large power folding improvements

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-MML-AM_CHTML"></script>
 	<script type="text/javascript" src="/biwascheme-0.6.8-min.js"></script>
 	<script type="text/javascript" src="/hljs-scheme.js"></script>
-	<script src="/app.js" type="text/javascript"></script>
-	<link rel="stylesheet" type="text/css" href="/app.css">
+	<script type="text/javascript" src="/app.js?v=0.0.1"></script>
+	<link rel="stylesheet" type="text/css" href="/app.css?v=0.0.1">
 	<link rel="stylesheet" type="text/css" href="/monokai-sublime.css">
 </head>
 <body>
@@ -32,7 +32,8 @@
 <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;All mixed partial derivatives of order <span id="order_num">2</span> with respect to variables specified above</p>
 
 <div id="debug_area" style="display: none;">
-	<p>Parsed as Infix: <br /><code class="scheme debug_outputs" readonly="true"></code></p>
+	<p>Input Infix: <br /><code class="scheme debug_outputs" readonly="true"></code></p>
+	<p>Parsed Infix: <br /><code class="scheme debug_outputs" readonly="true"></code></p>
 	<p>Constant Folding: <br /><code class="scheme debug_outputs" readonly="true"></code></p>
 	<p>Derivative as Prefix: <br /><code class="scheme debug_outputs" readonly="true"></code></p>
 	<p>Derivative as Infix: <br /><code class="scheme debug_outputs" readonly="true"></code></p>
