--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 
 
-<p>Output:</p>
+<h4>Output:</h4>
 <div>
 	<span id="detected_vars">f(x) = x</span><br /><br />
 	<span id="problem">`x=(-b+-sqrt(b^2 - 4ac)) / (2a)`</span>
@@ -23,12 +23,12 @@
 </div>
 
 <p style="color: orange; display: none;" id="error_box">Error: <span id="error_message"></span></p>
-<p>Differentiate:</p>
-<p>Expression: <span id="answer">x</span></p>
-<p>Relation: <span id="answer_lhs">x^2 + y^2 + z^2</span>`=`<span id="answer_rhs">1</span></p>
+<h4>Differentiate:</h4>
+<p>Expression: <span class="math-field" id="answer">x</span></p>
+<p>Relation: <span class="math-field" id="answer_lhs">x^2 + y^2 + z^2</span>`=`<span class="math-field" id="answer_rhs">1</span></p>
 <p> With respect to: <span id="wrt">x</span></p>
 <p>Solve for:</p>
-<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Mixed partial derivative with respect to <span id="wrt_arr">x, y</span> (computes <span id="wrt_disp" contenteditable="false">f_{xy}</span>) from left-to-right</p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Mixed partial derivative with respect to <span id="wrt_arr">x,\ y</span> (computes <span id="wrt_disp" contenteditable="false">f_{xy}</span>) from left-to-right</p>
 <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;All mixed partial derivatives of order <span id="order_num">2</span> with respect to variables specified above</p>
 
 <div id="debug_area" style="display: none;">
