Improve sizing and responsiveness

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 
 <h4>Output:</h4>
 <div>
-	<span id="detected_vars">f(x) = x</span><br /><br />
-	<span id="problem">`x=(-b+-sqrt(b^2 - 4ac)) / (2a)`</span>
-	<span id="problem2" style="display: none;"></span>
+	<span class="mathquill-disp" id="detected_vars">f(x) = x</span><br /><br />
+	<span class="mathjax-output" id="problem">`\frac{d}{dx} (f(x)) = 1`</span>
+	<span class="mathjax-output" id="problem2" style="display: none;"></span>
 </div>
 
 <p style="color: orange; display: none;" id="error_box">Error: <span id="error_message"></span></p>
