--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Symbolic Differentiator</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="/mathquill.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="/mathquill.min.js"></script>
@@ -18,7 +19,7 @@
 <h4>Output:</h4>
 <div>
 	<span class="mathquill-disp" id="detected_vars">f(x) = x</span><br /><br />
-	<span class="mathjax-output" id="problem">`\frac{d}{dx} (f(x)) = 1`</span>
+	<span class="mathjax-output" id="problem">`{:(\frac{d}{dx} (f(x)) =, 1):}`</span>
 	<span class="mathjax-output" id="problem2" style="display: none;"></span>
 </div>
 
