--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <p>Relation: <span class="math-field" id="answer_lhs">x^2 + y^2 + z^2</span>`=`<span class="math-field" id="answer_rhs">1</span></p>
 <p> With respect to: <span id="wrt">x</span></p>
 <p>Solve for:</p>
-<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Mixed partial derivative with respect to <span id="wrt_arr">x,\ y</span> (computes <span id="wrt_disp" contenteditable="false">f_{xy}</span>) from left-to-right</p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Mixed partial derivative with respect to <span id="wrt_arr">x,\ y</span> (computes <span id="wrt_disp" contenteditable="false">f_{xy}</span>) from left to right</p>
 <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;All mixed partial derivatives of order <span id="order_num">2</span> with respect to variables specified above</p>
 
 <div id="debug_area" style="display: none;">
