Improve relation input handling

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <p style="color: orange; display: none;" id="error_box">Error: <span id="error_message"></span></p>
 <h4>Differentiate:</h4>
 <p>Expression: <span class="math-field" id="answer">x</span></p>
-<p>Relation: <span class="math-field" id="answer_lhs">x^2 + y^2 + z^2</span>`=`<span class="math-field" id="answer_rhs">1</span></p>
+<p>Relation: <span class="math-field" id="answer_lhs">x^2 + y^2 + z^2</span>`=`<span class="math-field" id="answer_rhs">e^{xyz}</span></p>
 <p> With respect to: <span id="wrt">x</span></p>
 <p>Solve for:</p>
 <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Mixed partial derivative with respect to <span id="wrt_arr">x,\ y</span> (computes <span id="wrt_disp" contenteditable="false">f_{xy}</span>) from left to right</p>
