Implement inverse trig, improve web interface

--- a/index.html
+++ b/index.html
@@ -37,9 +37,15 @@
 			</div>
 		</div>
 	</div>
-	<div class="row">
-		<p style="color: orange; display: none;" id="error_box">Error: <span id="error_message"></span></p>
-	</div><br style="line-height: 1.4em;" />
+	<div id="error_box" style="display: none; margin-bottom: -1.0em;">
+		<br />
+		<div class="row">
+			<div class="col">
+				<p id="error_text">Error: <span id="error_message"></span>. Check console for more details.</p>
+			</div>
+		</div>
+	</div>
+	<br style="line-height: 1.4em;" />
 	<div class="row">
 		<div class="col">
 			<h4>Differentiate:</h4>
