Implement sample arrays

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 	<div class="row">
 		<div class="col">
 			<h4>Differentiate:</h4>
-			<p>Expression: <span class="math-field" id="answer">\sin (x^2+y^2)+x^x</span></p>
+			<p>Expression: <span class="math-field" id="answer">x</span></p>
 			<p>Relation: <span class="math-field" id="answer_lhs">x^2 + y^2 + z^2</span>`=`<span class="math-field" id="answer_rhs">e^{xyz}</span> solving for `\partial`<span id="answer_fn">z</span></p>
 			<p>With respect to: <span id="wrt">x</span></p>
 			<p>Solve for:</p>
