--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
     <p class="lead">The fastest, most complete Scheme symbolic differentiator you've ever seen.</p>
     <hr class="my-4">
 	<p>Take extremely complicated partial derivatives with ease!</p>
-	<a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
-	<a class="btn btn-primary btn-lg" href="#" role="button">Supported Functions</a>
-	<a class="btn btn-primary btn-lg" href="#" role="button">Horrific Samples</a>
+	<a class="btn btn-primary btn-lg" href="#" role="button" id="about_btn">About</a>
+	<a class="btn btn-primary btn-lg" href="#" role="button" id="supported_fn_btn">Supported Functions</a>
+	<a class="btn btn-primary btn-lg" href="#" role="button" id="sample_btn">Horrific Samples</a>
 </div>
 
 <div class="container-fluid">
@@ -69,6 +69,24 @@
 			</div>
 		</div>
 	</div>
+</div>
+
+<!-- Modal -->
+<div class="modal fade" id="userModal" tabindex="-1" role="dialog">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">Modal title</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body"></div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-primary" data-dismiss="modal">OK!</button>
+      </div>
+    </div>
+  </div>
 </div>
 
 </body>
