changed the test back

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <h1 class="main-lead display-4">Welcome to `d/dx` it!</h1><br/>
     <p class="lead">The fastest, most complete Scheme symbolic differentiator you've ever seen.</p>
     <hr class="my-4">
-	<p>Take complicated partial derivatives with ease!</p>
+	<p>Take extremely complicated partial derivatives with ease!</p>
 	<a class="btn btn-primary btn-lg" href="#" role="button" id="about_btn">About</a>
 	<a class="btn btn-primary btn-lg" href="#" role="button" id="supported_fn_btn">Supported Functions</a>
 	<a class="btn btn-primary btn-lg" href="#" role="button" id="sample_btn">Horrific Samples</a>
