--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     <hr class="my-4">
 	<p>Take extremely complicated partial derivatives with ease!</p>
 	<a class="btn btn-primary btn-lg" href="#" role="button" id="about_btn">About</a>
-	<a class="btn btn-primary btn-lg" href="#" role="button" id="supported_fn_btn">Supported Functions</a>
-	<a class="btn btn-primary btn-lg" href="#" role="button" id="sample_btn">Horrific Samples</a>
+	<a class="btn btn-primary btn-lg" href="#" role="button" id="supported_fn_btn">List of Supported Functions</a>
+	<a class="btn btn-primary btn-lg" href="#" role="button" id="sample_btn">Illustrative, Complex Samples</a>
 </div>
 
 <div class="container-fluid">
@@ -50,7 +50,7 @@
 		<div class="col">
 			<h4>Differentiate:</h4>
 			<p>Expression: <span class="math-field" id="answer">x</span></p>
-			<p>Relation: <span class="math-field" id="answer_lhs">x^2 + y^2 + z^2</span>`=`<span class="math-field" id="answer_rhs">e^{xyz}</span> solving for `\partial`<span id="answer_fn">z</span></p>
+			<p>Implicit Relation: <span class="math-field" id="answer_lhs">x^2 + y^2 + z^2</span>`=`<span class="math-field" id="answer_rhs">e^{xyz}</span> solving for `\partial`<span id="answer_fn">z</span></p>
 			<p>With respect to: <span id="wrt">x</span></p>
 			<p>Solve for:</p>
 			<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Mixed partial derivative with respect to <span id="wrt_arr">x,\ y</span> (computes <span id="wrt_disp" contenteditable="false">f_{xy}</span>) from left to right</p>
