Implement samples and dynamic resizing

--- a/index.html
+++ b/index.html
@@ -21,9 +21,11 @@
     <p class="lead">The fastest, most complete Scheme symbolic differentiator you've ever seen.</p>
     <hr class="my-4">
 	<p>Take extremely complicated partial derivatives with ease!</p>
+	<div class="btn-group">
 	<a class="btn btn-primary btn-lg" href="#" role="button" id="about_btn">About</a>
 	<a class="btn btn-primary btn-lg" href="#" role="button" id="supported_fn_btn">Supported Functions</a>
 	<a class="btn btn-primary btn-lg" href="#" role="button" id="sample_btn">Horrific Samples</a>
+</div>
 </div>
 
 <div class="container-fluid">
@@ -83,7 +85,7 @@
       </div>
       <div class="modal-body"></div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-primary" data-dismiss="modal">OK!</button>
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
       </div>
     </div>
   </div>
