--- a/index.html
+++ b/index.html
@@ -3,20 +3,25 @@
 <head>
 	<title>Symbolic Differentiator</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<link rel="stylesheet" href="/mathquill.css">
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.bundle.min.js" integrity="sha384-pjaaA8dDz/5BgdFUPX6M/9SUZv4d12SUPF0axWc+VRZkx5xU3daN+lYb49+Ax+Tl" crossorigin="anonymous"></script>
-	<script src="/mathquill.min.js"></script>
+	<script type="text/javascript" src="/assets/js/mathquill.min.js"></script>
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-MML-AM_CHTML"></script>
-	<script type="text/javascript" src="/biwascheme-0.6.8-min.js"></script>
-	<script type="text/javascript" src="/hljs-scheme.js"></script>
-	<script type="text/javascript" src="/app.js?v=0.0.1"></script>
+	<script type="text/javascript" src="/assets/js/biwascheme-0.6.8-min.js"></script>
+	<script type="text/javascript" src="/assets/js/hljs-scheme.js"></script>
+	<script type="text/javascript" src="/app.js?v=0.0.2"></script>
+	<link rel="stylesheet" href="/assets/css/mathquill.css">
 	<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-	<link rel="stylesheet" type="text/css" href="/app.css?v=0.0.1">
-	<link rel="stylesheet" type="text/css" href="/monokai-sublime.css">
+	<link rel="stylesheet" type="text/css" href="/app.css?v=0.0.2">
+	<link rel="stylesheet" type="text/css" href="/assets/css/monokai-sublime.css">
 </head>
 <body>
 <div class="jumbotron text-center">
+	<div class="jumbotron-top-right">
+		<div class="top-right-icon"><a target="_self" href="mailto:sumer.kohli@berkeley.edu"><div class="top-right-image" data-img="assets/img/email.png"></div></a></div>
+		<div class="top-right-icon"><a target="_blank" href="https://github.com/firebolt55439"><div class="top-right-image" data-img="assets/img/github.svg"></div></a></div>
+		<div class="top-right-icon"><a target="_blank" href="https://linkedin.com/in/sumerkohli"><div class="top-right-image" data-img="assets/img/linkedin.png"></div></a></div>
+	</div>
     <h1 class="main-lead display-4">Welcome to `d/dx` it!</h1><br/>
     <p class="lead">The fastest, most complete Scheme symbolic differentiator you've ever seen.</p>
     <hr class="my-4">
