Fix Jekyll config

--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+---
+---
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,10 +11,10 @@
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-MML-AM_CHTML"></script>
 	<script type="text/javascript" src="/assets/js/biwascheme-0.6.8-min.js"></script>
 	<script type="text/javascript" src="/assets/js/hljs-scheme.js"></script>
-	<script type="text/javascript" src="/app.js?v=0.0.2"></script>
+	<script type="text/javascript" src="/assets/js/app.js?_={{site.time | date: '%s%N'}}"></script>
 	<link rel="stylesheet" href="/assets/css/mathquill.css">
 	<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-	<link rel="stylesheet" type="text/css" href="/app.css?v=0.0.2">
+	<link rel="stylesheet" type="text/css" href="/assets/css/app.css?_={{site.time | date: '%s%N'}}">
 	<link rel="stylesheet" type="text/css" href="/assets/css/monokai-sublime.css">
 </head>
 <body>
