Implement sin^2(x) notation support; refine web interface

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 		<div class="top-right-icon"><a target="_blank" href="https://linkedin.com/in/sumerkohli"><div class="top-right-image" data-img="assets/img/linkedin.png"></div></a></div>
 	</div>
     <h1 class="main-lead display-4">Welcome to `d/dx` it!</h1><br/>
-    <p class="lead">The fastest, most complete Scheme symbolic differentiator you've ever seen.</p>
+    <p style="font: 1.05em/1.2 Symbola, serif !important;">The fastest, most complete symbolic differentiator you've ever seen.</p>
     <hr class="my-4">
-	<p>Take extremely complicated partial derivatives with ease!</p>
+	<p style="font: 0.95em/1.2 Symbola, serif !important;">Take extremely complicated derivatives instantaneously!</p>
 	<div class="btn-group">
 	<a class="btn btn-primary btn-lg" href="#" role="button" id="about_btn">About</a>
 	<a class="btn btn-primary btn-lg" href="#" role="button" id="supported_fn_btn">Supported Functions</a>
@@ -70,6 +70,7 @@
 	<div class="row">
 		<div class="col">
 			<div id="debug_area" style="display: none;">
+				<h4>Under the Hood:</h4>
 				<p>Input Infix: <br /><code class="scheme debug_outputs" readonly="true"></code></p>
 				<p>Parsed Infix: <br /><code class="scheme debug_outputs" readonly="true"></code></p>
 				<p>Constant Folding: <br /><code class="scheme debug_outputs" readonly="true"></code></p>
