Fix finnicky modal close button

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
       </div>
       <div class="modal-body"></div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary btn-close-modal" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-secondary btn-close-modal">Close</button>
       </div>
     </div>
   </div>
