Change button type

--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
     <hr class="my-4">
 	<p style="font: 0.95em/1.2 Symbola, serif !important;">Take extremely complicated derivatives instantaneously!</p>
 	<div class="btn-group">
-	<a class="btn btn-primary btn-lg" href="#" role="button" id="about_btn">About</a>
-	<a class="btn btn-primary btn-lg" href="#" role="button" id="supported_fn_btn">Supported Functions</a>
-	<a class="btn btn-primary btn-lg" href="#" role="button" id="sample_btn">Complex Samples</a>
+	<a class="btn btn-outline-primary btn-lg" href="#" role="button" id="about_btn">About</a>
+	<a class="btn btn-outline-primary btn-lg" href="#" role="button" id="supported_fn_btn">Supported Functions</a>
+	<a class="btn btn-outline-primary btn-lg" href="#" role="button" id="sample_btn">Complex Samples</a>
 </div>
 </div>
 
