--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <div class="jumbotron text-center">
 	<div class="jumbotron-top-right">
 		<div class="top-right-icon"><a target="_self" href="mailto:sumer.kohli@berkeley.edu"><div class="top-right-image" data-img="assets/img/email.png"></div></a></div>
-		<div class="top-right-icon"><a target="_blank" href="https://github.com/firebolt55439"><div class="top-right-image" data-img="assets/img/github.svg"></div></a></div>
+		<div class="top-right-icon"><a target="_blank" href="https://github.com/firebolt55439/symbolic-differentiator"><div class="top-right-image" data-img="assets/img/github.svg"></div></a></div>
 		<div class="top-right-icon"><a target="_blank" href="https://linkedin.com/in/sumerkohli"><div class="top-right-image" data-img="assets/img/linkedin.png"></div></a></div>
 	</div>
     <h1 class="main-lead display-4">Welcome to `d/dx` it!</h1><br/>
