--- a/index.html
+++ b/index.html
@@ -98,6 +98,13 @@
     </div>
   </div>
 </div>
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-19160871-15"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'UA-19160871-15');
+</script>
 </body>
 </html>
